# halo2-playground

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: rust.yml
src/: lib.rs
