[package]
name = "halo2-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/scroll-tech/halo2.git", rev="c7c72fd"}

[[bin]]
name = "multiplication"
path = "bin/multiplication.rs"
