[package]
name = "halo2-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { path = "deps/halo2/halo2_proofs", features = ["dev-graph"]}
halo2_gadgets =  { path = "deps/halo2/halo2_gadgets", features = ["dev-graph"]}
plotters = { version = "0.3.0", optional = true }
tabbycat = { version = "0.1", features = ["attributes"], optional = true }
rand_xorshift = "0.3"
rand = "0.8"


[features]
dev-graph = ["plotters", "tabbycat"]


[[bin]]
name = "multiplication"
path = "bin/multiplication.rs"

[[bin]]
name = "hash"
path = "bin/hash.rs"

